# GeometricDeformer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
modules/: FindMaya.cmake
src/: CMakeLists.txt  geometricDeformer.cpp  geometricDeformer.h  pluginMain.cpp
